                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 23-03-2006 fixed: my programs dvd share didn't have play disc entry.
 - 23-03-2006 fixed: old cdda rip path could be lost when browser was opened.
 - 23-03-2006 fixed: dvdplayer would fail to play urls with shout:// instead of http:// (fixes play using in Shoutcast Top 500)
 - 23-03-2006 fixed: file browser was broken since yesterday
 - 23-03-2006 fixed: dvdplayer would always assume an http stream was shoutcast.
 - 23-03-2006 fixed: dvdplayer would not end playback on read error when playing from file.
 - 23-03-2006 fixed: display of temparature texts in system info for non latin charsets
 - 23-03-2006 fixed: Trainer settings dialog couldn't take more than 8 buttons.
 - 23-03-2006 fixed: Skin reload would crash after trainer settings dialog was on screen.
 - 23-03-2006 changed: Default sort direction for program count, date, rating and size is now descending.
 - 23-03-2006 fixed: cdda rip path had to be specified in xml instead of in gui.
 - 22-03-2006 fixed: [ 1455993 ] Minor cosmetic problem with Kai when not connected.
 - 22-03-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 22-03-2006 updated: Norwegian language file (Thnx to vnm)
 - 22-03-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 22-03-2006 updated: German language file
 - 22-03-2006 fixed: Volume change with the remote moved in large chunks.
 - 22-03-2006 fixed: ListItem.Thumb/Icon only worked in the actual window on screen, not in any dialogs.
 - 22-03-2006 added: partial support for windows style domain specification. (smb://domain\user:password@host/...)